- TP framework bug

--- a/Test/Info.plist
+++ b/Test/Info.plist
@@ -28,6 +28,12 @@
 	<string>Main</string>
 	<key>UIRequiredDeviceCapabilities</key>
 	<array>
+		<string>video-camera</string>
+		<string>still-camera</string>
+		<string>front-facing-camera</string>
+		<string>microphone</string>
+		<string>camera-flash</string>
+		<string>auto-focus-camera</string>
 		<string>armv7</string>
 	</array>
 	<key>UISupportedInterfaceOrientations</key>
